--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-title: [The title of your site]
-description: [A short description of your site's purpose]
+title: [letscloud.github.io]
+description: [Various open source GWT and Java projects]
